--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -2,7 +2,7 @@
 dependencies:
   ## Required IDF version
   idf:
-    version: '>=4.1.0'
+    version: ">=4.1.0"
   # # Put list of dependencies here
   # # For components maintained by Espressif:
   # component: "~1.0.0"
@@ -14,6 +14,6 @@ dependencies:
   #   # `public` flag doesn't have an effect dependencies of the `main` component.
   #   # All dependencies of `main` are public by default.
   #   public: true
-  espressif/esp-zigbee-lib: '*'
-  espressif/esp-zboss-lib: '*'
-  espressif/led_strip: '*'
+  espressif/esp-zigbee-lib: "*"
+  espressif/esp-zboss-lib: "*"
+  espressif/led_strip: "*"
