fix: address 13 new code review suggestions
- T21: Fix zb_fake.c level validation (>254 -> >100)
- T14: Document zb_fct partition in partitions.csv
- T15: Add rounding to level % conversion (+50)
- T18: Add production security TODO for auto permit-join
- T19: Improve stack size justification comment
- T20: Document USB Serial JTAG secondary console
- T22/T23: Add os_event_unsubscribe() in tests
- T24: Wrap zba_shell_init in ifdef guard
- T17: Document PORT default and platform note
- T26: Clarify CMakeLists build-system conditional

--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,6 +1,8 @@
 # Drivers component - Hardware drivers (Zigbee, GPIO, I2C sensors)
 
-# Conditional Zigbee adapter: real implementation for ESP32-C6, fake for host
+# Conditional Zigbee adapter: real implementation for ESP32-C6, fake for host.
+# CONFIG_IDF_TARGET_ESP32C6 is only defined when building with ESP-IDF (idf.py).
+# Host builds (make all/test) use the else branch with zb_fake.c.
 if(CONFIG_IDF_TARGET_ESP32C6)
     set(ZIGBEE_SRCS
         "zigbee/zb_real.c"
